--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Simba Coding
+title: Senior Coding
 subtitle: 一名前端的自我修养
 description: Stay Hungry.  Stay Foolish.
-author: Simba
+author: Jinge.Liu
 language: zh-Hans
 timezone: 
 
