--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -371,7 +371,7 @@ changyan:
 # You can get your appid and appkey from https://leancloud.cn
 # more info please open https://github.com/xCss/Valine
 valine:
-  enable: true
+  enable: false
   appid: Qqo6hRvrjzPcFnNvcxFcnQVh-gzGzoHsz
   appkey: CPghDGHPg6TWDR9i1LvfyDzq
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
